# binllion

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/convert_to_ascii/: main.rs  rust-toolchain.toml
examples/error_handling/: main.rs
examples/first_step/: main.rs
examples/keypresses/: main.rs
examples/keypresses-crossterm/: main.rs
examples/press_q/: main.rs
examples/ratatui/: event_handler.rs  main.rs  tui.rs
examples/raw_mode/: main.rs
examples/split-module1/: main.rs
examples/split-module2/: main.rs  tui.rs
examples/write_file_create/: main.rs
src/: constants.rs  event_handler.rs  main.rs  message.rs  tui.rs
src/tui/: converter.rs
