[package]
name = "binllion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.28.1"

[dev-dependencies]
ascii = "1.1.0"
encoding_rs = "0.8.34"
